update authors information

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,37 @@
-Authors of the FeathersV1 Dataset
-================================
+Authors of the FeathersV1 Dataset:
 
 Alina Belko <alinabelko __at__ gmail.com>
 Konstantin Dobratulin <zsxoff __at__ gmail.com>
+
+Feathers images owners and sites which provided images by license or
+permissions, in lexical order:
+
+* Feather Atlas by U.S. Fish and Wildlife Service images freely available to
+  the public and no special permission is required for their use.
+  See: <https://www.fws.gov/lab/featheratlas/>
+
+* featherlab.ru with written consent provided by Daria Korepova.
+  See: <http://featherlab.ru/>
+
+* federn.org are licensed by GNU FDL license.
+  See: <https://www.federn.org/>
+
+* michelklemann.nl by Michel Klemann are licensed by Copyleft.
+  See: <http://www.michelklemann.nl/verensite/start/index.html>
+
+* ornithos.de with written consent provided by Christine Wedler.
+  See: <http://www.ornithos.de/>
+
+* Private feathers collection by Emel'yan Kuranov.
+  See: <https://vk.com/club184290985/>
+
+* Private feathers collection by Yuliya Lygina.
+  See: <https://www.deviantart.com/rinorin69/>
+
+* Private feathers collection by Yan Voron.
+  See: <https://vk.com/voiceless_dogs/>
+
+* Scientific feather collection of Wilfried Hansen are licensed by CC BY 4.0.
+
+* vogelfedern.de by Stephan Schubert are licensed by Copyleft.
+  See: <http://www.vogelfedern.de/>
