--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Authors of the FeathersV1 Dataset:
 
 Alina Belko <alinabelko __at__ gmail.com>
+Andrey Kuznetsov <kuznetsoff.andrey __at__ gmail.com>
 Konstantin Dobratulin <zsxoff __at__ gmail.com>
 
 Feathers images owners and sites which provided images by license or
